objects/Account.object
<CustomObject>
    <fields>
        <fullName>Customer_Service_Level_CSL__c</fullName>
        <description>Customer Service Level (CSL)</description>
        <inlineHelpText>Service Level of the Customer</inlineHelpText>
        <label>Customer Service Level (CSL)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collaborative Device Manufacturer (CDM)</fullName>
                </value>
                <value>
                    <fullName>Key Collaborator (KC)</fullName>
                </value>
                <value>
                    <fullName>Rest of World (ROW)</fullName>
                    <default>true</default>
                    <label>Rest of World (ROW)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Shipping_Label__c</fullName>
        <description>This is a replacement of the Customer Shortname for the Label Printing</description>
        <label>Customer Shipping Label</label>
        <length>12</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Visitation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Visitation</label>
        <referenceTo>Visitation_Record__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DIW_Account_ID__c</fullName>
        <label>DIW Account ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNPETLID__c</fullName>
        <externalId>true</externalId>
        <label>DNPETLID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DPL_HelperFld__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denied Partlist helper field,to avoid multiple triggering</description>
        <label>DPL HelperFld</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <inlineHelpText>Used primarily for FoundryView B2B</inlineHelpText>
        <label>DUNS#</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTime_Last_Synced_With_OpenText__c</fullName>
        <label>DateTime Last Synced With OpenText</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Denied_Info__c</fullName>
        <formula>IF( Unauthorized_Percentage__c &gt; 75, 
			IMAGE(&quot;/resource/DeniedPartyImages/Images/Red.jpg&quot;, &quot;red&quot;, 30, 30),
			IF( AND(Unauthorized_Percentage__c &lt;= 75,Unauthorized_Percentage__c &gt; 50),
			IMAGE(&quot;/resource/DeniedPartyImages/Images/Yesllow.jpg&quot;, &quot;yellow&quot;, 30, 30),
			IF(AND(Unauthorized_Percentage__c &lt;= 50,Unauthorized_Percentage__c &gt;= 1),
			IMAGE(&quot;/resource/DeniedPartyImages/Images/Orange.jpg&quot;, &quot;Orange&quot;, 30, 30),
			IF( Unauthorized_Percentage__c == 0,
			IMAGE(&quot;/resource/DeniedPartyImages/Images/Green.jpg&quot;, &quot;green&quot;, 30, 30),
			&apos;&apos;
			))))+
			IF(Unauthorized_Percentage__c != 0,
			&quot;This company has been flagged as a denied party listed organization. &quot; &amp; BR() &amp; &quot;Please contact global_trade@globalfoundries.com , if you believe this to be incorrectly flagged.&quot;,
			&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If denied percentage
a) 1 to 50 (Customer Legal - Yellow Flag)
b) 50 to 75(Partial Legal - Orange Flag)
c) Above 75 to 100(Not Legal - Red Flag)
d) Not Equals to Zero(Legal - Green Flag)</inlineHelpText>
        <label>Denied Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denied_Party_Contact__c</fullName>
        <formula>IF(Unauthorized__c,&apos;This company has been flagged as a denied party listed organization. Please contact global_trade@globalfoundries.com , if you believe this to be incorrectly flagged.&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denied Party Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denied_Party_Percentage1__c</fullName>
        <formula>Unauthorized_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denied Party Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Denied_Party_Percentage_Colour__c</fullName>
        <formula>IF(Unauthorized_Percentage__c &lt;50,&quot;Green&quot;,IF(OR(Unauthorized_Percentage__c &gt;= 50,Unauthorized_Percentage__c&lt;=75),&quot;Yellow&quot;,IF(Unauthorized_Percentage__c &gt; 75,&quot;Red&quot;,&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Denied Party Percentage Colour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disengaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disengaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <label>Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_Status_Message__c</fullName>
        <label>ERP Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Early_Ship_Days__c</fullName>
        <label>Early Ship Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_of_Account_Admin__c</fullName>
        <description>FV2:Email of account admin</description>
        <formula>Account_Admin__r.Email</formula>
        <label>Email of Account Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees_At_Site__c</fullName>
        <inlineHelpText>Number of Employees at the Site.</inlineHelpText>
        <label>Employees At Site</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <label>End Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Control_Template__c</fullName>
        <label>Export Control Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exp_Ctrl_Cust01</fullName>
                </value>
                <value>
                    <fullName>Export_Control_Version_default</fullName>
                    <default>true</default>
                    <label>Export_Control_Version_default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAE_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAE Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FAE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FV2: Account Team member with role Field Account Engineer</description>
        <label>FAE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FAE_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FE_Territory__c</fullName>
        <label>FE Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>APJ-FE-CHINA</fullName>
                </value>
                <value>
                    <fullName>APJ-FE-JAPAN</fullName>
                </value>
                <value>
                    <fullName>APJ-FE-TAIWAN-KOREA-ROA</fullName>
                </value>
                <value>
                    <fullName>EUR-FE</fullName>
                </value>
                <value>
                    <fullName>US-FE-AMD</fullName>
                </value>
                <value>
                    <fullName>US-FE-BRCM</fullName>
                </value>
                <value>
                    <fullName>US-FE-East</fullName>
                </value>
                <value>
                    <fullName>US-FE-QCOM</fullName>
                </value>
                <value>
                    <fullName>US-FE-West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSE_Backup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSE Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FSE_Backup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FTP_Directory__c</fullName>
        <description>FTP Directory is a new field being populated from Martini Store to SFDC.</description>
        <label>FTP Directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fab_9_10__c</fullName>
        <label>Fab 9/10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Fab_Logistics_Readiness__c</fullName>
        <formula>IF (Financial_Fab_Readiness_Authorized__c == &quot;TRUE&quot;, IMAGE (&quot;resource/Account_Progress_3&quot;, &quot;&quot;, 30, 65) + &quot;Authorized Ready&quot;, IMAGE (&quot;resource/Account_Progress_2&quot;, &quot;&quot;, 30, 65) + &quot;Ready for Qualified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Please fill up the following Financial/Fab Logistics Information: 
-  Organization Unit
-  Invoice Term</inlineHelpText>
        <label>Financial/Fab Logistics Readiness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Fab_Readiness_Authorized__c</fullName>
        <formula>IF( 
AND( 
NOT(ISPICKVAL(Invoice_Term__c, &quot;&quot;)) 
, NOT(ISBLANK(Organization_Unit__c)) 
) 
, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial/Fab Readiness (Authorized)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Territory_Change_Request__c</fullName>
        <label>Territory Change Request</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region_Change_Request__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>US-East</fullName>
                </value>
                <value>
                    <fullName>US West1</fullName>
                </value>
                <value>
                    <fullName>US SoCal1</fullName>
                </value>
                <value>
                    <fullName>EMEA-ROA</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Japan Korea</fullName>
                </value>
                <value>
                    <fullName>US NW</fullName>
                </value>
                <value>
                    <fullName>US SoCal2</fullName>
                </value>
                <value>
                    <fullName>US Central1</fullName>
                </value>
                <value>
                    <fullName>SEC-Foundry</fullName>
                </value>
                <value>
                    <fullName>MRVL</fullName>
                </value>
                <value>
                    <fullName>NVDA</fullName>
                </value>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>US Central2</fullName>
                </value>
                <value>
                    <fullName>US SW</fullName>
                </value>
                <value>
                    <fullName>US SoCal3</fullName>
                </value>
                <value>
                    <fullName>US NorCal</fullName>
                </value>
                <value>
                    <fullName>US NE1</fullName>
                </value>
                <value>
                    <fullName>US NE2</fullName>
                </value>
                <value>
                    <fullName>US SE</fullName>
                </value>
                <value>
                    <fullName>US West2</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>US NE3</fullName>
                </value>
                <value>
                    <fullName>ASIC-NA</fullName>
                </value>
                <value>
                    <fullName>ASIC-AP</fullName>
                </value>
                <value>
                    <fullName>ASIC-EMEA</fullName>
                </value>
                <value>
                    <fullName>ASIC-JP</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>US-East</fullName>
                </value>
                <value>
                    <fullName>US SoCal1</fullName>
                </value>
                <value>
                    <fullName>EMEA-ROA</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Japan Korea</fullName>
                </value>
                <value>
                    <fullName>US NW</fullName>
                </value>
                <value>
                    <fullName>US SoCal2</fullName>
                </value>
                <value>
                    <fullName>US Central1</fullName>
                </value>
                <value>
                    <fullName>SEC-Foundry</fullName>
                </value>
                <value>
                    <fullName>MRVL</fullName>
                </value>
                <value>
                    <fullName>NVDA</fullName>
                </value>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>US Central2</fullName>
                </value>
                <value>
                    <fullName>US SW</fullName>
                </value>
                <value>
                    <fullName>US SoCal3</fullName>
                </value>
                <value>
                    <fullName>US NorCal</fullName>
                </value>
                <value>
                    <fullName>US NE1</fullName>
                </value>
                <value>
                    <fullName>US NE2</fullName>
                </value>
                <value>
                    <fullName>US SE</fullName>
                </value>
                <value>
                    <fullName>US West1</fullName>
                </value>
                <value>
                    <fullName>US West2</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>US NE3</fullName>
                </value>
                <value>
                    <fullName>ASIC-NA</fullName>
                </value>
                <value>
                    <fullName>ASIC-AP</fullName>
                </value>
                <value>
                    <fullName>ASIC-EMEA</fullName>
                </value>
                <value>
                    <fullName>ASIC-JP</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Founded_Change_Request__c</fullName>
        <description>FV2: This field is created for entering the new changed value of the field Founded by the portal users</description>
        <label>Founded Change Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Founded__c</fullName>
        <inlineHelpText>1). Date when the company is founded.
2). To save an older date please key in the value as &quot;3/5/2010&quot;</inlineHelpText>
        <label>Founded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTMRefereneceID__c</fullName>
        <label>GTMRefereneceID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_SAP_Customer_Form__c</fullName>
        <formula>IF(ISPICKVAL(Stage__c,&apos;Authorized&apos;)
,HYPERLINK(&quot;/apex/CustomerSetupFormSAP?id=&quot;&amp;Id ,IMAGE(&quot;/resource/Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;) 
,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate SAP Customer Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Customer_Name__c</fullName>
        <label>Group Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Customer_Number__c</fullName>
        <description>Created based on Kings request which will hold group customer ERP Number</description>
        <label>Group Customer Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hard_Peg_Flag__c</fullName>
        <label>Hard Peg Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hard Peg</fullName>
                </value>
                <value>
                    <fullName>Soft Peg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Valid_NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true if any of the account in the hierarchy has a valid NDA agreement irrespective of tech geometries.</description>
        <label>Has Valid NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highlight_1__c</fullName>
        <inlineHelpText>Add highlight for Executive and Mobile Summary</inlineHelpText>
        <label>Highlight 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Highlight_2__c</fullName>
        <inlineHelpText>Add highlight for Executive and Mobile Summary</inlineHelpText>
        <label>Highlight 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IP_Agreement_Licensing_Attachment_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IP Agreement Licensing Attachment Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Declaration_Template__c</fullName>
        <label>IP Declaration Template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IP_Declaration_Version_default</fullName>
                    <default>true</default>
                    <label>IP_Declaration_Version_default</label>
                </value>
                <value>
                    <fullName>IP_Decl_Cust01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Licensing_Agreement_Id__c</fullName>
        <label>IP Licensing Agreement Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Licensing_Agreement_Status__c</fullName>
        <label>Licensing Agreement Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Approval_Date__c</fullName>
        <label>Inactive Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Users_Report__c</fullName>
        <description>FV 2 : Used to reference to report- Inactive Account Users Error Report.</description>
        <formula>IF( Portal_User_Deactivation_Error__c =true,HYPERLINK(&quot;https://cs5.salesforce.com/00OO0000000Fgqz?pv1=&quot; &amp; Id, &quot;Open Report&quot;),&apos;&apos;)</formula>
        <label>Inactive Users Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Electronic__c</fullName>
        <label>Invoice Delivery Electronic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>3C3</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Delivery_Email__c</fullName>
        <label>Invoice Delivery Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Term_Change_Request__c</fullName>
        <label>Invoice Term Change Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booking Date</fullName>
                </value>
                <value>
                    <fullName>Shipping Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Term__c</fullName>
        <label>Invoice Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booking Date</fullName>
                    <default>true</default>
                    <label>Booking Date</label>
                </value>
                <value>
                    <fullName>Shipping Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Distributor__c</fullName>
        <label>Is Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Lead_Source__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Lead Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_change_request_update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FV2: Custom field created to trigger the update of all the change request fields in account</description>
        <label>Is change request update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_ASIC_expiration_date__c</fullName>
        <label>Latest ASIC NDA expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_NDA_Expiration_Date__c</fullName>
        <description>Equals last expiring NDA’s expiration date  signed by the customer.</description>
        <inlineHelpText>Equals last expiring NDA’s expiration date  signed by this customer.</inlineHelpText>
        <label>Latest NDA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_NDA_template_Version_date__c</fullName>
        <formula>$Label.Date_of_Revision_of_Templates</formula>
        <label>Latest NDA template Version/date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_By__c</fullName>
        <label>Lead Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensing_Agreement__c</fullName>
        <formula>IF(IP_Licensing_Agreement_Status__c = &apos;Approved&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensing Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lowlight_1__c</fullName>
        <inlineHelpText>Add Lowlight for Executive and Mobile Summary</inlineHelpText>
        <label>Lowlight 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lowlight_2__c</fullName>
        <inlineHelpText>Add Lowlight for Executive and Mobile Summary</inlineHelpText>
        <label>Lowlight 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <inlineHelpText>Enter one or more Market Segments that the Customer participates.</inlineHelpText>
        <label>Market Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Compute, Connect, Store (CCS)</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Industrial,Medical &amp;Scientific</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Testchip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Comments_on_Account__c</fullName>
        <description>Text  field for Marketing Comments</description>
        <label>Marketing Comments on Account (MKTG)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Martinistore_Sync_Status__c</fullName>
        <description>AIA integration updates this field with ERROR or SUCCESS status from Martinistore procedure.</description>
        <label>Martinistore Sync Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged_SAP_Sold_To_Numbers__c</fullName>
        <label>Merged SAP Sold-To Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged_SAP_Sold_To_s__c</fullName>
        <label>Merged SAP Sold-To&apos;s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_Fields_Authorized__c</fullName>
        <label>Missing Fields (Authorized)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Missing_Fields_Qualified__c</fullName>
        <label>Missing Fields (Qualified)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Modified_By_HCM_Login_ID__c</fullName>
        <description>Field created for Siebel Integration
-Sent in the Outbound message</description>
        <formula>LastModifiedBy.HCM_Login_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modified By HCM Login ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Organization_Unit_Request__c</fullName>
        <label>Add New Organization Unit Change Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GF Investment LLC OU</fullName>
                </value>
                <value>
                    <fullName>GF Netherlands Holding BV OU</fullName>
                </value>
                <value>
                    <fullName>GF Dresden Module One Admin GmbH OU</fullName>
                </value>
                <value>
                    <fullName>GF Americas Inc OU</fullName>
                </value>
                <value>
                    <fullName>GF Taiwan Ltd</fullName>
                </value>
                <value>
                    <fullName>GF Dresden Module Two GmbH &amp; Co. KG OU</fullName>
                </value>
                <value>
                    <fullName>GF Dresden Module One LLC</fullName>
                </value>
                <value>
                    <fullName>GF Netherlands B.V. OU</fullName>
                </value>
                <value>
                    <fullName>GF Singapore Pte Ltd OU (Fab 3E)</fullName>
                </value>
                <value>
                    <fullName>GF Dresden Module One LLC &amp; Co. KG OU</fullName>
                </value>
                <value>
                    <fullName>GF Inc (Cayman) OU</fullName>
                </value>
                <value>
                    <fullName>SMP Pte Lte/Lucent OU</fullName>
                </value>
                <value>
                    <fullName>GF Management Services LLC &amp; Co. KG OU</fullName>
                </value>
                <value>
                    <fullName>GF New York OU</fullName>
                </value>
                <value>
                    <fullName>GF Dresden Module Two LLC</fullName>
                </value>
                <value>
                    <fullName>GF (Netherlands) Cooperatief U.A. OU</fullName>
                </value>
                <value>
                    <fullName>GF Singapore Pte Ltd OU (Fab 6)</fullName>
                </value>
                <value>
                    <fullName>GF Japan Ltd</fullName>
                </value>
                <value>
                    <fullName>SMP Pte Ltd OU</fullName>
                </value>
                <value>
                    <fullName>GF U.S. Inc. OU</fullName>
                </value>
                <value>
                    <fullName>GF Dresden Module Two Admin GmbH OU</fullName>
                </value>
                <value>
                    <fullName>GF Dresden Module One Holding GMBH OU</fullName>
                </value>
                <value>
                    <fullName>GF Dresden Module Two Holding GmbH OU</fullName>
                </value>
                <value>
                    <fullName>GF Europe Ltd</fullName>
                </value>
                <value>
                    <fullName>GF Singapore Pte Ltd OU</fullName>
                </value>
                <value>
                    <fullName>GF Burlington OU</fullName>
                </value>
                <value>
                    <fullName>GF East Fishkill OU</fullName>
                </value>
                <value>
                    <fullName>GF (Chengdu) Integrated Circuit Mfg Co., Ltd. OU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_SAP_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New SAP Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Contacts__c</fullName>
        <label>No. of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPP_Status__c</fullName>
        <label>OPP Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPT_Status__c</fullName>
        <label>OPT Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Approval_Status__c</fullName>
        <label>Old Approval Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenText_Error_Message__c</fullName>
        <label>OpenText Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>